[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/World/Background1.png" type="Texture" id=2]
[ext_resource path="res://Assets/World/Background2.png" type="Texture" id=3]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 14.0
text = "Volume"
align = 1

[node name="VolumeSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 34.0
min_value = -80.0
max_value = 0.0

[node name="ReturnButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 38.0
margin_right = 80.0
margin_bottom = 58.0
text = "Return"

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 255, 127 )
texture = ExtResource( 3 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 253, 144 )
texture = ExtResource( 2 )

[connection signal="value_changed" from="CanvasLayer/VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
